Prevent auth buttons from covering navbar

--- a/src/components/PrimaryNavbar/PrimaryNavbar.scss
+++ b/src/components/PrimaryNavbar/PrimaryNavbar.scss
@@ -51,3 +51,14 @@
     }
   }
 }
+
+@media (max-width: 760px) {
+  .header-main {
+    .header-options {
+      .auth-options {
+        position: absolute;
+        top: 45px;
+      }
+    }
+  }
+}
